# rota_ai_desertation

./: .dockerignore  .gitignore  README.md  docker-compose.dev-backend.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_export.xlsx
app/: database.py  main.py
app/models/: filter_schemas.py  schemas.py
app/services/: data_processor.py  excel_export_service.py  filter_service.py  notification_service.py  openai_service.py  progress_service.py  rota_service.py  scheduler_core.py  stats_service.py  travel_service.py
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: FilterPanel.jsx  NotificationTray.jsx  ProgressIndicator.jsx
frontend/src/contexts/: ProgressContext.jsx
frontend/src/hooks/: useFilterManager.js
frontend/src/pages/: AssignmentOverview.jsx  Assignments.jsx  CreateAssignment.jsx  Dashboard.jsx  DataUpload.jsx  Employees.jsx  Patients.jsx  Stats.jsx
frontend/src/services/: websocketService.js
frontend/src/store/: useFilterStore.js  useStore.js
input_files/: Final_template_format.xlsx
