[project]
name = "ai-rota-system"
version = "0.1.0"
description = "AI-based rota system for healthcare"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openai>=1.12.0",
    "httpx>=0.25.2",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.4.0",
    "python-dotenv>=1.0.0",
    "xlrd>=2.0.1",
    "sqlalchemy>=2.0.43",
    "googlemaps>=4.10.0",
    "websockets>=15.0.1",
    "celery>=5.5.3",
    "redis>=6.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0"
] 
